[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/UI/LevelPickerButtonsSet.gd" type="Script" id=1]
[ext_resource path="res://Graphics/UI/Scrap 4.png" type="Texture" id=2]
[ext_resource path="res://Graphics/UI/White Circular Frame.png" type="Texture" id=3]
[ext_resource path="res://Scripts/UI/ButtonModulator.gd" type="Script" id=4]
[ext_resource path="res://Fonts/scratchl.tres" type="DynamicFont" id=5]
[ext_resource path="res://Graphics/UI/Cog.png" type="Texture" id=6]
[ext_resource path="res://Graphics/UI/White Arrow.png" type="Texture" id=7]

[node name="LevelPickerButtonSet" type="Control"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="0"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="InfoPaper" type="TextureRect" parent="CanvasLayer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -153.0
margin_top = 190.0
margin_right = 347.0
margin_bottom = 374.0
rect_rotation = -1.45374
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Button" type="TextureButton" parent="CanvasLayer/InfoPaper" index="0"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 321.0
margin_top = 16.0
margin_right = 667.0
margin_bottom = 351.0
rect_rotation = 2.71477
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
script = ExtResource( 4 )
_sections_unfolded = [ "Mouse", "Rect", "Textures", "Visibility" ]
hover_color = Color( 0, 0.460938, 1, 1 )
press_color = Color( 0, 0.0859375, 1, 1 )

[node name="Label" type="Label" parent="CanvasLayer/InfoPaper/Button" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 137.0
margin_top = 34.0
margin_right = 146.0
margin_bottom = 74.0
rect_scale = Vector2( 8.5, 8.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "i"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Mouse", "Rect", "custom_colors", "custom_fonts" ]

[node name="SettingPaper" type="TextureRect" parent="CanvasLayer" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -151.0
margin_top = 276.0
margin_right = 349.0
margin_bottom = 460.0
rect_rotation = -1.45374
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Button" type="TextureButton" parent="CanvasLayer/SettingPaper" index="0"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 326.0
margin_top = 23.0
margin_right = 550.0
margin_bottom = 247.0
rect_rotation = 2.71477
rect_scale = Vector2( 0.55, 0.55 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
script = ExtResource( 4 )
_sections_unfolded = [ "Mouse", "Rect", "Textures", "Visibility" ]
hover_color = Color( 0.351562, 0.351562, 0.351562, 1 )
press_color = Color( 0.199219, 0.199219, 0.199219, 1 )

[node name="BackPaper" type="TextureRect" parent="CanvasLayer" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -151.0
margin_top = 361.0
margin_right = 349.0
margin_bottom = 545.0
rect_rotation = -1.45374
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Button" type="TextureButton" parent="CanvasLayer/BackPaper" index="0"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 316.0
margin_top = 17.0
margin_right = 662.0
margin_bottom = 352.0
rect_rotation = 2.71477
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
script = ExtResource( 4 )
_sections_unfolded = [ "Mouse", "Rect", "Textures", "Visibility" ]
hover_color = Color( 1, 0.419355, 0.419355, 1 )
press_color = Color( 1, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BackPaper/Button" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 289.0
margin_top = 282.0
margin_right = 510.0
margin_bottom = 527.0
rect_rotation = 179.004
rect_scale = Vector2( 0.95, 0.95 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 0
_sections_unfolded = [ "Mouse", "Rect" ]

[connection signal="pressed" from="CanvasLayer/InfoPaper/Button" to="." method="info_pressed"]

[connection signal="pressed" from="CanvasLayer/SettingPaper/Button" to="." method="setting_pressed"]

[connection signal="pressed" from="CanvasLayer/BackPaper/Button" to="." method="quit_pressed"]


